--- a/catalogo/src/main/resources/application.properties
+++ b/catalogo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=catalogo
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://mongodb:27017/catalog}
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.schema.printer.enabled=true
+spring.graphql.schema.locations[0]=classpath:graphql/
+
+management.endpoints.web.exposure.include=*
