test(catalog): add unit tests for ProductRestController

--- a/catalogo/pom.xml
+++ b/catalogo/pom.xml
@@ -57,7 +57,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>4.20.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
