--- a/inventario/Dockerfile
+++ b/inventario/Dockerfile
@@ -2,6 +2,6 @@ FROM azul/zulu-openjdk:24
 
 WORKDIR /app
 
-COPY target/inventory-service-*.jar app.jar
+COPY target/inventario-0.0.1-SNAPSHOT.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
