--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=inventario
+spring.r2dbc.url=r2dbc:postgresql://postgres:5432/inventory
+spring.r2dbc.username=postgres
+spring.r2dbc.password=password
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=10
+
+spring.r2dbc.initialization-mode=always
+spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.continue-on-error=true
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+
+logging.level.root=INFO
+logging.level.org.springframework.r2dbc=DEBUG
+logging.level.io.r2dbc.postgresql=DEBUG
